<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/hugo_dark"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:text="@string/hello_message"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/introduction_message"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/task_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin"
                    app:contentPadding="@dimen/padding"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:text="@string/task_1_title"
                        app:drawableTopCompat="@drawable/ic_baseline_timer_24" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/task_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin"
                    app:contentPadding="@dimen/padding"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:text="@string/task_2_title"
                        android:gravity="center"
                        app:drawableTopCompat="@drawable/ic_baseline_vertical_align_center_24"/>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/task_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin"
                    app:contentPadding="@dimen/padding"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:text="@string/task_3_title"
                        app:drawableTopCompat="@drawable/ic_baseline_airplanemode_active_24" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/task_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin"
                    app:contentPadding="@dimen/padding"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:text="@string/task_4_title"
                        android:gravity="center"
                        app:drawableTopCompat="@drawable/ic_baseline_timer_10_24"/>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/task_5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/margin"
                    app:contentPadding="@dimen/padding"
                    android:clickable="true"
                    android:focusable="true">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:text="@string/task_5_title"
                        app:drawableTopCompat="@drawable/ic_baseline_assignment_ind_24" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>